--- a/homeassistant/components/ozw/translations/en.json
+++ b/homeassistant/components/ozw/translations/en.json
@@ -1,6 +1,10 @@
 {
     "config": {
         "abort": {
+            "addon_info_failed": "Failed to get OpenZWave add-on info.",
+            "addon_install_failed": "Failed to install the OpenZWave add-on.",
+            "addon_set_config_failed": "Failed to set OpenZWave config.",
+            "addon_start_failed": "Failed to start the OpenZWave add-on.",
             "mqtt_required": "The MQTT integration is not set up",
             "single_instance_allowed": "Already configured. Only a single configuration possible."
         },
